social signup and login

--- a/userauth/templates/userauth/account/login.html
+++ b/userauth/templates/userauth/account/login.html
@@ -1,6 +1,6 @@
 {% extends 'account/base_card.html' %}
 
-{% load i18n %}
+{% load i18n socialaccount %}
 
 {% block title %}{% trans "Sign in" %}{% endblock %}
 
@@ -9,6 +9,8 @@
 {% endblock %}
 
 {% block card-body %}
+
+    {% get_providers as socialaccount_providers %}
 
     <form method="POST" action="{% url 'account_login' %}" class="needs-validation" novalidate>
         {% csrf_token %}
@@ -20,6 +22,11 @@
         </div>
         <button type="submit" class="btn btn-outline-primary">{% trans "Sign in" %}</button>
     </form>
+    {% if socialaccount_providers %}
+        <br>
+        <p>{% blocktrans with site.name as site_name %}or sign in with one of your existing third party accounts:{% endblocktrans %}</p>
+        {% include "socialaccount/provider_list.html" with process="login" %}
+    {% endif %}
 
 {% endblock %}
 
