--- a/pet/static/css/pet.css
+++ b/pet/static/css/pet.css
@@ -23,6 +23,55 @@
     overflow: hidden;
     font: italic 12px Georgia, serif;
 }
+/* for the videos inside streamfields */
+.block-video-right {
+    float: right;
+    margin-left: 20px;
+    font: italic 12px Georgia, serif;
+}
+.block-video-left {
+    float: left;
+    margin-right: 20px;
+    font: italic 12px Georgia, serif;
+}
+.block-video-center {
+    display: grid;
+    /* margin auto works here because embed adapts to size of container */
+    margin: auto;
+    overflow: hidden;
+    font: italic 12px Georgia, serif;
+}
+.block-video-small {
+    width: 240px;
+    height: auto;
+}
+.block-video-medium {
+    width: 480px;
+    height: auto;
+    max-width: 100%;
+}
+.block-video-large {
+    width: 2400px;
+    height: auto;
+    max-width: 100%;
+}
+/* to make embedded objects responsive https://docs.wagtail.io/en/v2.9/topics/writing_templates.html#responsive-embeds */
+.rich-text img {
+    max-width: 100%;
+    height: auto;
+}
+.responsive-object {
+    position: relative;
+}
+.responsive-object iframe,
+.responsive-object object,
+.responsive-object embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 /* for the images with text overlay on cms pages */
 .card-img-overlay .card-title, .card-subtitle, .card-text {
     color: white;
