--- a/cms/templates/cms/home_page.html
+++ b/cms/templates/cms/home_page.html
@@ -6,6 +6,34 @@
 
 {% block content %}
 
+    <div id="carouselFull" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            {% for item in page.theme_section.get_children %}
+                <li data-target="#carouselFull" data-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active"{% endif %}></li>
+            {% endfor %}
+        </ol>
+        <div class="carousel-inner">
+            {% for item in page.theme_section.get_children %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    <a href="{% pageurl item %}">
+                        {% image item.specific.image fill-2000x360 class="img-fluid" %}
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5><a href="{% pageurl item %}" class="carousel-caption">{{ item.title }}</a></h5>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselFull" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">{%  trans Previous %}</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselFull" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">{%  trans Next %}</span>
+        </a>
+    </div>
+
     <div class="container-fluid mt-4">
         <div class="page-title">
             <h1>{{ page.title }}</h1>
@@ -14,6 +42,39 @@
             {{ page.intro|richtext }}
         </div>
     </div>
+
+    {% if page.theme_section %}
+        <div class="container-fluid mt-4">
+            <div class="page-title">
+                <h1>{{ page.theme_section_title }}</h1>
+            </div>
+            <div class="page-intro">
+                {{ page.theme_section_intro|richtext }}
+            </div>
+        </div>
+        <div class="container-fluid mt-4">
+            <div class="row">
+                {% for childpage in page.theme_section.get_children %}
+                    <div class="col-auto mb-3">
+                        <div class="card theme">
+                            <a href="{{ childpage.url }}">
+                                {% if childpage.specific.image %}
+                                    {% image childpage.specific.image fill-320x240 class="img-front rounded-circle" %}
+                                {% else %}
+                                    <img alt="" src="{% static 'images/transparent.png' %}" width="320" height="240" class="img-default rounded-circle">
+                                {% endif %}
+                                <img alt="" src="{% static 'images/transparent.png' %}" width="320" height="240" class="img-background rounded-circle">
+                                <div class="card-img-overlay">
+                                    <br><h5 class="card-title text-center">{{ childpage.title }}</h5>
+                                    <p class="card-subtitle text-center">{{ childpage.specific.intro|striptags|safe|truncatewords:15 }}</p>
+                               </div>
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    {% endif %}
 
     {% if page.article_section %}
         <div class="container-fluid mt-4">
