--- a/pet/static/css/pet.css
+++ b/pet/static/css/pet.css
@@ -1,3 +1,10 @@
+/* general styles for the whole site */
+a {
+    color: navy;
+}
+h1, h2, h3, h4, h5 {
+    color: navy;
+}
 .img-fluid {
     max-width: 100%;
     height: auto;
@@ -79,10 +86,10 @@
 p.card-subtitle {
     color: white;
 }
-.card.article {
+.card.article, .card.theme {
     border: none;
 }
-.article {
+.article, .theme {
     width: 320px;
     height: 240px;
 }
