favicon logo footer added

--- a/cms/templates/cms/main_menu.html
+++ b/cms/templates/cms/main_menu.html
@@ -1,8 +1,10 @@
 {% load wagtailimages_tags cms_tags %}
 
 {% get_menu "main" None request.user.is_authenticated as navigation %}
+{% company_logo as logo %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+    <a class="navbar-brand" href="/">{% image logo.logo fill-50x50 %}{{ logo.name }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
