--- a/pet/templates/base.html
+++ b/pet/templates/base.html
@@ -19,6 +19,8 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="{% static 'images/favicon-32x32.png' %}"/>
+        <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@1&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'css/pet.css' %}">
 
         {% block extra_css %}
@@ -32,6 +34,8 @@
         {% include "main_menu.html" %}
 
         {% block content %}{% endblock %}
+
+        {% include "footer.html" %}
 
         {# Global javascript #}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
