--- a/pet/templates/base.html
+++ b/pet/templates/base.html
@@ -3,6 +3,16 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165112312-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-165112312-2');
+        </script>
+
         <meta charset="utf-8" />
         <title>
             {% block title %}
