--- a/pet/templates/base.html
+++ b/pet/templates/base.html
@@ -14,7 +14,7 @@
                 {% endwith %}
             {% endblock %}
         </title>
-        <meta name="description" content="" />
+        <meta name="description" content="{% if self.search_description %}{{ self.search_description }}{% endif %}" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
